push chrome properties into the configuration file

--- a/src/test/resources/configuration/global.properties
+++ b/src/test/resources/configuration/global.properties
@@ -1,1 +1,8 @@
 browser.type = firefox
+
+chrome.properties = no-default-com.e2open.falcon.framework.browser-check,\
+                            no-first-run,                          \
+                            safebrowsing-disable-auto-update,      \
+                            download.prompt_for_download=false,    \
+                            autofill-enabled=false,                \
+                            password-manager-enabled=false
