--- a/src/test/resources/configuration/global.properties
+++ b/src/test/resources/configuration/global.properties
@@ -1,8 +1,24 @@
 browser.type = firefox
 
 chrome.properties = no-default-com.e2open.falcon.framework.browser-check,\
-                            no-first-run,                          \
-                            safebrowsing-disable-auto-update,      \
-                            download.prompt_for_download=false,    \
-                            autofill-enabled=false,                \
+                            no-first-run,\
+                            safebrowsing-disable-auto-update,\
+                            download.prompt_for_download=false,\
+                            autofill-enabled=false,\
                             password-manager-enabled=false
+
+firefox.properties = app.update.auto=false,\
+  		app.update.enabled=false,\
+		app.update.mode=0,\
+		app.update.silent=true,\
+        browser.shell.checkDefaultBrowser=false,\
+		browser.tabs.warnOnClose=false,\
+		warnOnOpen=false,\
+		dom.max_chrome_script_run_time=180,\
+		dom.max_script_run_time=600,\
+		extensions.update.enabled=false,\
+		com.e2open.falcon.framework.browser.popups.showPopupBlocker=true,\
+		dom.disable_open_during_load=false,\
+		com.e2open.falcon.framework.browser.sessionstore.resume_from_crash=false,\
+		com.e2open.falcon.framework.browser.link.open_newwindow=2,\
+		signon.rememberSignons=false
