get IE properties from the configuration file

--- a/src/test/resources/configuration/global.properties
+++ b/src/test/resources/configuration/global.properties
@@ -22,3 +22,9 @@ firefox.properties = app.update.auto=false,\
 		com.e2open.falcon.framework.browser.sessionstore.resume_from_crash=false,\
 		com.e2open.falcon.framework.browser.link.open_newwindow=2,\
 		signon.rememberSignons=false
+
+internetexplorer.properties = initialBrowserUrl=about:blank,\
+        browser_name=Internet Explorer,\
+        accept_ssl_certs=true,\
+        has_native_events=false
+
