--- a/src/test/resources/configuration/global.properties
+++ b/src/test/resources/configuration/global.properties
@@ -1,4 +1,4 @@
-browser.type = firefox
+browser = firefox
 
 chrome.properties = no-default-com.e2open.falcon.framework.browser-check,\
                             no-first-run,\
