add deployment process to the POM

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,9 @@
     <description>Test Automation Framework</description>
 
     <properties>
+        <github.global.server>github</github.global.server>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <release.branch.name>mvn-repo-0.1.0.SNAPSHOT</release.branch.name>
     </properties>
 
     <distributionManagement>
@@ -33,6 +35,30 @@
                     <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo
                     </altDeploymentRepository>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.9</version>
+                <configuration>
+                    <message>Maven artifacts for ${project.version}</message>                                 <!-- git commit message -->
+                    <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>                    <!-- matches distribution management repository url above -->
+                    <branch>refs/heads/${release.branch.name}</branch>                                       <!-- remote branch name -->
+                    <includes>
+                        <include>**/*</include>
+                    </includes>
+                    <repositoryName>falcon</repositoryName>
+                    <repositoryOwner>e2open</repositoryOwner>                                               <!-- github username  -->
+                </configuration>
+                <executions>
+                    <!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
+                    <execution>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>deploy</phase>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
