--- a/src/main/resources/configuration/default.properties
+++ b/src/main/resources/configuration/default.properties
@@ -1,6 +1,6 @@
 browser = firefox
 
-chrome.properties = no-default-com.e2open.falcon.framework.browser-check,\
+chrome.properties = no-default-com.e2open.falcon.browser-check,\
                             no-first-run,\
                             safebrowsing-disable-auto-update,\
                             download.prompt_for_download=false,\
@@ -17,10 +17,10 @@ firefox.properties = app.update.auto=false,\
 		dom.max_chrome_script_run_time=180,\
 		dom.max_script_run_time=600,\
 		extensions.update.enabled=false,\
-		com.e2open.falcon.framework.browser.popups.showPopupBlocker=true,\
+		com.e2open.falcon.browser.popups.showPopupBlocker=true,\
 		dom.disable_open_during_load=false,\
-		com.e2open.falcon.framework.browser.sessionstore.resume_from_crash=false,\
-		com.e2open.falcon.framework.browser.link.open_newwindow=2,\
+		com.e2open.falcon.browser.sessionstore.resume_from_crash=false,\
+		com.e2open.falcon.browser.link.open_newwindow=2,\
 		signon.rememberSignons=false
 
 internetexplorer.properties = initialBrowserUrl=about:blank,\
